--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": false,
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "test": "jest",
+    "dev": "NODE_ENV=development nodemon server.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -13,9 +14,13 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
+    "jest": "^29.6.1",
+    "jest-fetch-mock": "^3.0.3",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "openai": "^3.3.0",
+    "unsplash-js": "^7.0.18"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
