--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "scripts": {
     "start": "node server.js",
     "test": "jest",
-    "dev": "NODE_ENV=development nodemon server.js"
+    "dev": "nodemon --trace-warnings server.js"
   },
   "dependencies": {
+    "amadeus": "^8.1.0",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.39.0",
+    "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
+    "express-session": "^1.17.3",
     "jest": "^29.6.1",
     "jest-fetch-mock": "^3.0.3",
     "jsonwebtoken": "^9.0.1",
@@ -24,9 +27,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "openai": "^3.3.0",
     "unsplash-js": "^7.0.18",
-    "xstate": "^4.38.2",
-    "express-session": "^1.17.3",
-    "connect-mongo": "^5.0.0"
+    "xstate": "^4.38.2"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.3.3",
